--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,15 +2,21 @@ body {
     text-align: center;
     background-color: #f0e8c5;
   }
+
+  .welcome-message {
+  display: inline;
+  }
+
+  .current-score {
+  display: inline;
+  position: absolute;
+  right:75px;
+  }
   
   div {
     margin-top: 15px;
   }
-  
-  /* .image-section {
-    display: flex;
-    justify-content: center;
-  } */
+
   
   .section-style {
     margin-right: 25px;
@@ -27,3 +33,51 @@ body {
     bottom: 100px;
     left: 50;
   }
+
+  .user-div{
+    opacity:1;
+    background-color:#ccc;
+    position:fixed;
+    width:100%;
+    height:100%;
+    top:-20px;
+    left:0px;
+    z-index:1000;
+    visibility:visible; 
+  }
+
+  .game-over{
+      opacity:1;
+      background-color:rgb(0, 0, 0);
+      position:fixed;
+      width:100%;
+      height:100%;
+      top:-20px;
+      left:0px;
+      z-index:1000;
+      visibility:hidden;
+  }
+
+  .play-again{
+  position:absolute;
+  top:550px;  
+  background-color:rgb(219, 0, 0);
+  left:48%;
+  }
+
+  .game-over-message{
+    position:absolute;
+    color:red;
+    right: 77vh;
+    top:150px;
+  }
+
+  .final-score{
+    position:absolute;
+    color:gold;
+  }
+
+  .rhymes-form{
+    visibility:hidden;
+  }
+
