--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,6 @@
 body {
     text-align: center;
-    background-color: #f0e8c5;
+    background-color:powderblue;
   }
 
   .welcome-message {
@@ -25,7 +25,7 @@ body {
   }
 
   .each-word {
-    text-align: left 50vh
+    text-align: left 50vh;
   }
 
   .play{
@@ -43,7 +43,29 @@ body {
     top:-20px;
     left:0px;
     z-index:1000;
-    visibility:visible; 
+    visibility:visible;
+    background-size: cover;
+    height: 100vh;
+    background-image: url("https://cdn2.vectorstock.com/i/1000x1000/21/51/game-backgrounds-landscape-at-morning-vector-10692151.jpg") 
+  }
+
+  .user-form{
+    
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    width: 20em;
+    height: cover;
+    margin-top: -9em;
+    margin-left: -15em;
+    border: 1px solid;
+    background-color: #f3f3f3;
+
+  }
+  .user-card{
+    font-family: 'Aclonica'
+
+
   }
 
   .game-over{
@@ -56,6 +78,7 @@ body {
       left:0px;
       z-index:1000;
       visibility:hidden;
+      
   }
 
   .play-again{
@@ -81,3 +104,21 @@ body {
     visibility:hidden;
   }
 
+  .rhymes-list{
+    list-style-type: "*";
+    max-width:50px;
+  }
+
+  .timer-span{
+    background-color:rgb(29, 178, 223);
+    height: 35px;
+    width: 35px;
+    border-radius: 50%;
+    display: inline-block;
+
+  }
+
+  .timer{
+    position:relative;
+    bottom: 16px;
+  }
