--- a/styles/styles.css
+++ b/styles/styles.css
@@ -51,9 +51,9 @@ body {
 
   .user-form{
     
-    position: fixed;
+    position: absolute;
     top: 50%;
-    left: 50%;
+    left: 55%;
     width: 20em;
     height: cover;
     margin-top: -9em;
@@ -89,7 +89,7 @@ body {
   }
 
   .game-over-message{
-    position:absolute;
+    position:center;
     color:red;
     right: 77vh;
     top:150px;
@@ -97,6 +97,7 @@ body {
 
   .final-score{
     position:absolute;
+    left: 450px;
     color:gold;
   }
 
@@ -121,4 +122,14 @@ body {
   .timer{
     position:relative;
     bottom: 16px;
+  }
+
+  .each-word{
+    position: center;
+    text-align:center;
+    max-width: 50%;
+  }
+
+  .rhymes-box{
+    max-width:50%;
   }
