--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,14 +4,17 @@ body {
   }
 
   .welcome-message {
-  display: inline;
+    display: inline;
   }
 
   .current-score {
-  display: inline;
-  position: absolute;
-  right:75px;
+    display: inline;
+    position: absolute;
+    right:75px;
+    font-size: large;
+
   }
+ 
   
   div {
     margin-top: 15px;
@@ -74,32 +77,64 @@ body {
       position:fixed;
       width:100%;
       height:100%;
-      top:-20px;
+      top:-15px;
       left:0px;
       z-index:1000;
       visibility:hidden;
+      margin: 0;
+      background: yellow;
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      margin-right: 0;
+      transform: translate(-50%, -50%);
       
   }
 
   .play-again{
-  position:absolute;
-  top:550px;  
-  background-color:rgb(219, 0, 0);
-  left:48%;
+   
+    position: absolute;
+    top: 52%;
+   
+    transform: translate(-50%,-50%);
+    
+    background-color: #f4511e;
+    
+    color: rgb(248, 248, 248);
+    padding: 10px 20px;
+    text-align: center;
+    font-size: 24px;
+    margin: 3px 2px;
+    opacity: 0.8;
+    transition: 0.3s;
+  }
+  
+  .play-again:hover {opacity: 1}
+
+  .final-score {
+    animation-duration: 2s;
+    animation-timing-function: ease;
+    animation-iteration-count: infinite;
+    animation-name: anim-1 ;
+    font-size: 2em;
+    
+    margin-top: -10%;
+    
+    }
+  @keyframes anim-1 {
+    0%, 8.3% { left: -200%; opacity: .5; }
+   
   }
 
   .game-over-message{
-    position:center;
-    color:red;
-    right: 77vh;
-    top:150px;
+    
+    transform: translateY(10px);
+    font-size: 65px;
+
+ 
   }
 
-  .final-score{
-    position:absolute;
-    left: 450px;
-    color:gold;
-  }
+  
 
   .rhymes-form{
     visibility:hidden;
@@ -132,4 +167,11 @@ body {
 
   .rhymes-box{
     max-width:50%;
+  }
+  
+
+  .score-card{
+    
+    margin-top: 20%;
+    
   }
